--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <div class="items">
                 <div id="Sedans">
-                    <img src="/images/icon-sedans.svg" alt="Sedans Image" />
+                    <img src="./images/icon-sedans.svg" alt="Sedans Image" />
                     <h1>Sedans</h1>
                     <p>
                         Choose a sedan for its affordability and excellent fuel
@@ -30,7 +30,7 @@
                 </div>
 
                 <div id="Suvs">
-                    <img src="/images/icon-suvs.svg" alt="Sedans Image" />
+                    <img src="./images/icon-suvs.svg" alt="Sedans Image" />
                     <h1>Suvs</h1>
                     <p>
                         Take an SUV for its spacious interior, power, and
@@ -41,7 +41,7 @@
                 </div>
 
                 <div id="Luxury">
-                    <img src="/images/icon-luxury.svg" alt="Sedans Image" />
+                    <img src="./images/icon-luxury.svg" alt="Sedans Image" />
                     <h1>Luxury</h1>
                     <p>
                         Cruise in the best car brands without the bloated
